<resources>
    <string name="app_name">RomeBattleGroup</string>
    <string name="fraction_rome">Rome</string>
    <string name="web_link">Web ссылка</string>
    <string name="action_search"></string>
    <string name="action_presentation"></string>
    <string name="action_sort">По популярности</string>
    <string name="filter">Фильтры</string>
    <string name="logo_description">Rome 2 Total War</string>
    <string name="battle_groups">Отряды</string>
    <string-array name="populus">
        <item>по крутости</item>
        <item>по возрастанию цены</item>
        <item>по убыванию цены</item>
    </string-array>
    <string name="rom_armour_legionaries">Доспешные легионеры</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores expedita laudantium quaerat quia sit! Accusamus asperiores assumenda ipsam laudantium libero odio, quis ratione repellendus veniam voluptatibus? Error nulla quam velit.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ability">Атакующая черепаха</string>
    <string name="ability_type">Доспешные Легионеры</string>
    <string name="ability_desc">Отряд поднимает щиты над головами в защитном боевом порядке.</string>
    <string name="ability_adv">Защита от снарядов и стрел</string>
    <string name="ability_weak">Скорость ограничена</string>
    <string name="prop_text">Этот отряд не теряет боевого духа, лишившись военачальника, а сбежав, чаще возвращается на поле боя.</string>
    <string name="prop">Дисциплина</string>
    <string name="silaSlabost">Грузовое судно</string>

</resources>
